lab3-4/apps/store-simulator/base/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: store-simulator
    app.kubernetes.io/version: 0.0.10
  name: store-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: store-simulator
      app.kubernetes.io/version: 0.0.10
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: store-simulator
        app.kubernetes.io/version: 0.0.10
    spec:
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          image: quay.io/ibmcase/eda-store-simulator
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: store-simulator
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
          - mountPath: /deployments/certs/server
            name: kafka-cert
            readOnly: false
            subPath: ""
          - mountPath: /deployments/certs/user
            name: user-cert
            readOnly: false
            subPath: ""
      serviceAccount: store-simulator
      volumes:
      - name: kafka-cert
        secret:
          optional: true
          secretName: es-demo-cluster-ca-cert
      - name: user-cert
        secret:
          optional: true
          secretName: ventress8-tls-user
