lab3-4/apps/store-simulator/base/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: store-simulator
    app.kubernetes.io/version: 0.0.10
  name: store-simulator
spec:
  host: "store-simulator-ventress8.apps.ventress.coc-ibm.com"
  path: /
  port:
    targetPort: http
  to:
    kind: Service
    name: store-simulator
